portfolio image add

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,10 +23,29 @@
     <p class="navbar-text">Hannah Jacoby</p>
     </nav> 
 
-    <div class="container">
-        <img src="https://img.freepik.com/free-vector/hexagonal-pattern_1051-833.jpg?size=338&ext=jpg" alt="Hangman" style="width=150px height=100px">
-        <div class="centered">Hangman</div>     
+    <div class="row">
+        <div class="column">
+          <img src="assets/images/dog.png" alt="hangman" style="width:200px height=400px">
+          <div class="hangman">Hangman</div>  
+        </div>
+        <div class="column">
+          <img src="assets/images/black.png" alt="rpg-game" style="width:150px height=100px">
+          <div class="rpg-game">RPG Game</div>  
+        </div>
+        <div class="column">
+          <img src="assets/images/runway.png" alt="trivia-game" style="width:150px height=100px">
+          <div class="trivia-game">Trivia Game</div>
+        </div>
+        <div class="column">
+            <img src="assets/images/skyline.png" alt="rutgers-info-widget" style="width:150px height=100px">
+            <div class="trivia-game">Rutgers Info Widget</div>
+          </div>
+        <div class="column">
+            <img src="assets/images/lamps.png" alt="rock-paper-scissors" style="width:150px height=100px">
+            <div class="rock-paper-scissors">Rock Paper Scissors</div>
+          
       </div>
+
    
     </body>
 
