--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
                     <hr class="line"></hr>
             
-                    <img src="https://picsum.photos/200">
+                    <img src="assets/images/me.png">
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem accusantium ab eos doloribus veniam dolores assumenda officia voluptate libero unde enim vero, quo magni dicta vel dolore ullam nam delectus adipisci. Qui ab quo, earum accusamus minima dolorem doloribus explicabo numquam! Maiores culpa autem modi voluptatum velit, tempore sint voluptates.
                     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias officiis ratione, voluptate nobis provident nulla. Beatae nisi velit voluptas fuga, minus assumenda architecto provident officia alias odio recusandae eaque mollitia incidunt laudantium ab praesentium unde pariatur eum. Placeat veniam laborum, quisquam magni autem, consectetur eum rerum non quidem numquam debitis?
